took .99 away from price/fixed spacing issues/added DFY to ROI table

--- a/src/pages/home-page/components/emm-msp-section/emm-msp-section.scss
+++ b/src/pages/home-page/components/emm-msp-section/emm-msp-section.scss
@@ -1,8 +1,6 @@
 @use "../../../../shared/tms-styles.scss" as styles;
 
 .emm-msp-section-container {
-  //   background-image: url("https://firebasestorage.googleapis.com/v0/b/total-mobility-solution-6c7cc.firebasestorage.app/o/light-mobile-device-background-slightly-angled.png?alt=media&token=7a793819-4e4e-427f-939b-4f1f2038e8a4");
-  //   background-size: 40%;
   background-color: styles.$extra-light-grey;
 }
 
@@ -11,6 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .emm-msp-section-subtitle {
@@ -41,13 +40,6 @@
   position: relative;
   z-index: 1;
   clip-path: polygon(0% 0%, 100% 0%, 100% 60%, 50% 100%, 0% 60%);
-
-  //   &:nth-child(odd) {
-  //     margin-top: 0;
-  //     padding-bottom: 0;
-  //     padding-top: 140px;
-  //     clip-path: polygon(0% 100%, 0% 40%, 50% 0%, 100% 40%, 100% 100%);
-  //   }
 }
 
 .emm-msp-list-title {
@@ -68,6 +60,7 @@
 
 .emm-msp-table-container {
   width: 100%;
+  max-width: 800px;
   border-collapse: collapse;
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.1);
   font-size: styles.rem(16);
